# DinoRemakes

./: .gitattributes  .gitignore  README.md
Assets/: README.md
Godot/: .gitignore  DinoRemakes.sln  README.md
Godot/DinoRemakes/: DinoRemakes.csproj  project.godot
Godot/DinoRemakes.Core/: DinoRemakes.Core.csproj
Godot/DinoRemakes.Core/Save/: SaveData.cs  SaveExtensions.cs
Godot/DinoRemakes.Core/SourceGen/: JsonContext.cs
Godot/DinoRemakes/properties/: launchSettings.json
Love2D/: README.md
Love2D/DinoRemakes/: conf.lua  main.lua
Love2D/DinoRemakes/components/: ParallaxedSprite.lua  Sprite.lua
Love2D/DinoRemakes/scenes/: background.lua
Love2D/DinoRemakes/utils/: Object.lua  Utils.lua
MonoGame/: README.md
MonoGame/DinoRemakes/: DinoRemakes.sln
MonoGame/DinoRemakes/DinoRemakes/: Program.cs  (+3 more)
Raylib/: README.md
Raylib/DinoRemakes/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json  version.h.in
Raylib/DinoRemakes/DinoRemakes/: CMakeLists.txt  main.cpp
Raylib/DinoRemakes/DinoRemakes/components/: label.hpp  transform.hpp
Raylib/DinoRemakes/DinoRemakes/core/: Game.cpp  Game.h  component.cpp  component.h  configuration.cpp  configuration.h  entity.cpp  entity.h  game.cpp  game.h  system.cpp  system.h  world.cpp  world.h
Raylib/DinoRemakes/DinoRemakes/systems/: label_renderer.hpp
Raylib/DinoRemakes/DinoRemakes/worlds/: splash_screen.cpp
Raylib/DinoRemakes/cmake/: ConfigureEnv.cmake  ConfigureFlags.cmake  ConfigurePackages.cmake  GlobalInstall.cmake
Stride/: README.md
Stride/DinoRemakes/: DinoRemakes.sln
Unity/: README.md
(+168 files in other folders)
